# WOMBAT-1D

./: .gitignore  README.md  config.example.yml  pyproject.toml
.github/workflows/: gotm-smoke-test.yml  sync-upstream-wombat.yml
example_data/: init_profiles.nc  jra55_point.nc
scripts/: check_gotm.sh  check_wombat_lite_alignment.py  create_example_data.py  install_gotm.sh  sync_wombat_sources.py
tests/: test_gotm_mixing.py  test_simulation_time_window.py  test_smoke.py
womcol/: __init__.py  cli.py  config.py  gotm.py  io.py  simulation.py  wombat.py
womcol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
womcol/upstream/: generic_WOMBATlite.F90  generic_WOMBATmid.F90  metadata.json
