[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "womcol"
version = "0.1.0"
description = "1-D water-column WOMBAT-lite/mid model with GOTM physics integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "xarray>=2023.1",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "netCDF4>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.3"]

[project.scripts]
womcol-run = "womcol.cli:main"

[tool.setuptools]
packages = ["womcol"]
